# t_acccounts_generator

./: LICENSE  README.md  deepseek_client.py  main.py  models.py  openai_client.py  pyproject.toml  test_clients.py
clients/: __init__.py  anthropic_client.py  bedrock_client.py  gemini_client.py  gemma_client.py  ollama_client.py  openai_client.py
results_2025_12_11/: claude_opus_4_5_digital_wallet.txt  claude_opus_4_5_payroll.txt  claude_opus_4_5_simple_digital_wallet.txt  claude_opus_4_5_simple_payroll.txt  deepseek_r1_digital_wallet.txt  deepseek_r1_payroll.txt  deepseek_r1_simple_digital_wallet.txt  deepseek_r1_simple_payroll.txt  gemini_3_pro_digital_wallet.txt  gemini_3_pro_payroll.txt  gemini_3_pro_simple_digital_wallet.txt  gemini_3_pro_simple_payroll.txt  gemma3_digital_wallet.txt  gemma3_payroll.txt  gemma3_simple_digital_wallet.txt  gemma3_simple_payroll.txt  gpt_5_2_digital_wallet.txt  gpt_5_2_payroll.txt  gpt_5_2_simple_digital_wallet.txt  gpt_5_2_simple_payroll.txt  gpt_oss_20b_digital_wallet.txt  gpt_oss_20b_payroll.txt  gpt_oss_20b_simple_digital_wallet.txt  gpt_oss_20b_simple_payroll.txt
test_cases/: digital_wallet.yaml  digital_wallet_chart_of_accounts.txt  payroll.yaml  payroll_chart_of_accounts.txt  simple_digital_wallet.yaml  simple_payroll.yaml
